# tree-sitter-rust-format-args

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  lol.txt  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.lol  tree-sitter.json
bindings/c/: tree-sitter-rust-format-args.h  tree-sitter-rust-format-args.pc.in  tree-sitter-rustfmt.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rustfmt/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRustFmt/: rustfmt.h
bindings/swift/TreeSitterRustFmtTests/: TreeSitterRustFmtTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: rustfmt.txt
