[package]
name = "tree-sitter-rust-format-args"
description = "A grammar for Rust's std::fmt formatting language"
version = "0.1.0"
authors = ["Nikita Revenco <pm@nikrev.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "rust-format-args"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nik-rev/tree-sitter-rust-format-args"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
